# socket-vmnet-shim

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
scripts/: install-socket-vmnet.sh
src/: main.rs
